--- a/.github/index.html
+++ b/.github/index.html
@@ -53,7 +53,7 @@
       <a href="./distributed_verification/">distributed_verification APIs</a>
     </li>
     <li>
-      <a href="./rustc/">Rustc Internal APIs</a> (nightly-xxxx-xx-xx) required by Charon
+      <a href="./rustc/">Rustc Internal APIs</a> (nightly-xxxx-xx-xx) required by Kani
     </li>
   </ul>
 </body>
